--- a/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
@@ -1,7 +1,10 @@
 <div class="toolbar toolbar-dark toolbar-floating pull-left" style="margin-right: 5px;">
-    <a class="btn" data-command="viewerPan"><i class="zmdi zmdi-arrows"></i></a>
     <a class="btn" data-command="viewerZoomIn"><i class="zmdi zmdi-plus-circle-o"></i></a>
     <a class="btn" data-command="viewerZoomOut"><i class="zmdi zmdi-minus-circle-outline"></i></a>
+</div>
+
+<div class="toolbar toolbar-dark toolbar-floating pull-left" style="margin-right: 5px;">
+    <a class="btn" data-command="viewerPan"><i class="zmdi zmdi-arrows"></i></a>
 </div>
 
 <div class="toolbar toolbar-dark toolbar-floating pull-left">
