--- a/Journal/index.html
+++ b/Journal/index.html
@@ -52,10 +52,12 @@
 	<script src="bower_components/jquery-appear/src/jquery.appear.js"></script>
 	<script src="bower_components/emojione/lib/js/emojione.js"></script>
 	<script src="bower_components/angular-emojione/angular-emojione.js"></script>
+	<script src="bower_components/angular-scroll-glue/src/scrollglue.js"></script>
 	<!-- endbower -->
 	<!-- start auto template tags -->
 	<script type="text/javascript" src="app/conf.js"></script>
 	<script type="text/javascript" src="app/classes/activity.js"></script>
+	<script type="text/javascript" src="app/classes/comment.js"></script>
 	<script type="text/javascript" src="app/classes/editing-statistics.js"></script>
 	<script type="text/javascript" src="app/classes/entity-cache.js"></script>
 	<script type="text/javascript" src="app/classes/entity.js"></script>
