Improved user photo directive. Improved styling of feedback in chat control. Fixed things in project view.

--- a/Journal/app/directives/art-user-photo-img/art-user-photo-img.html
+++ b/Journal/app/directives/art-user-photo-img/art-user-photo-img.html
@@ -1,7 +1,7 @@
-<a class="btn btn-avatar circular" ng-style="t.style" ng-click="t.selectFile($event);">
+<div class="btn btn-avatar circular" ng-style="t.style">
     <input type="file" accept="image/*" style="display: none;"/>
 
     <div class="placeholder"></div>
 
     <img ng-src="{{t.src}}" width={{t.width}} height="{{t.height}}">
-</a>
+</div>
