--- a/Journal/app/directives/art-chat-control/art-chat-control.html
+++ b/Journal/app/directives/art-chat-control/art-chat-control.html
@@ -12,7 +12,7 @@
                                         <img src="app/resources/user.svg" width="28" height="28" class="img img-circular">
                                     </div>
                                     <div class="comment-bubble">
-                                        <div class="bubble-text" emojione="{{comment.message}}"></div>
+                                        <div class="bubble-content"><i class="icon zmdi zmdi-help"></i><span class="text" emojione="{{comment.message}}"</span></div>
                                         <div class="bubble-tip"></div>
                                         <div class="clearfix"></div>
                                     </div>
