Filtering for Projects when retriebing project id in CommunicationArchiveWriter. Added Utc to StartTime and EndTime of Activity.

--- a/Journal/app/directives/art-project-tabs/art-project-tabs.html
+++ b/Journal/app/directives/art-project-tabs/art-project-tabs.html
@@ -10,7 +10,9 @@
 
         <art-file-list onload="t.getRecentlyUsedFiles">
             <empty>
-                <h3 style="margin-top: 5em;">Your recent files will appear here.</h3>
+                <div class="text-center">
+                    <h3 style="margin-top: 5em;">Your recent files will appear here.</h3>
+                </div>
             </empty>
         </art-file-list>
     </uib-tab>
