--- a/Journal/app/directives/art-chat-control/art-chat-control.html
+++ b/Journal/app/directives/art-chat-control/art-chat-control.html
@@ -4,30 +4,10 @@
             <div class="ctl-protocol">
                 <div class="scroll-container scroll-y layout-fix" scroll-glue>
                     <ul class="comment-list list-unstyled">
-                        <li class="comment-item list-item list-item-unstyled" ng-repeat="comment in t.comments" ng-class="{'request-item': comment.type !== 'Comment'}"
-                            ng-mouseenter="t.showMarks(comment)" ng-mouseleave="t.hideMarks(comment)">
-                            <div class="comment-container">
-                                <div class="comment" ng-class="{'comment-user': t.isUserComment(comment)}">
-                                    <div class="comment-avatar">
-                                        <img src="app/resources/user.svg" width="28" height="28" class="img img-circular">
-                                    </div>
-                                    <div class="comment-bubble">
-                                        <div class="bubble-content"><i class="icon zmdi zmdi-help"></i><span class="text" emojione="{{comment.message}}"</span></div>
-                                        <div class="bubble-tip"></div>
-                                        <div class="clearfix"></div>
-                                    </div>
-                                    <div class="comment-time">
-                                        <label class="time pull-right small">{{t.getFormattedTime(comment.endTime, 'hh:mm')}}</label>
-                                    </div>
-
-                                    <a class="btn" ng-show="false" ng-click="t.createMark(comment)" style="position: absolute; bottom: 0; right: 0;">
-                                        <i class="zmdi zmdi-photo-size-select-small"></i>
-                                    </a>
-                                </div>
-                            </div>
+                        <li ng-repeat="comment in t.comments" class="list-item">
+                            <art-chat-comment comment="comment"></art-chat-comment>
                         </li>
                     </ul>
-                    <div class="clearfix"></div>
                 </div>
             </div>
         </div>
