--- a/Journal/index.html
+++ b/Journal/index.html
@@ -115,6 +115,7 @@
 	<script type="text/javascript" src="app/services/viewer.service.js"></script>
 	<script type="text/javascript" src="app/services/window.service.js"></script>
 	<script type="text/javascript" src="app/filters/reverse.js"></script>
+	<script type="text/javascript" src="app/directives/art-chat-comment/art-chat-comment.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-control/art-chat-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-input/art-chat-input.js"></script>
 	<script type="text/javascript" src="app/directives/art-client-state-info/art-client-state-info.js"></script>
