--- a/Journal/app/directives/art-document-view/art-document-view.html
+++ b/Journal/app/directives/art-document-view/art-document-view.html
@@ -11,13 +11,13 @@
             <art-document-viewer file="t.file"></art-document-viewer>
 
             <div class="ui-sidebar ui-sidebar-right">
-                <uib-tabset>
+                <uib-tabset class="tabs-centered">
                     <uib-tab heading="Chat">
                         <div class="layout-container">
                             <art-chat-control entity-uri="t.latestRevisionUri"></art-chat-control>
                         </div>
                     </uib-tab>
-                    <uib-tab heading="Topics">
+                    <uib-tab heading="Themen">
                         <div class="layout-container">
                             <art-topic-control entity-uri="t.latestRevisionUri"></art-topic-control>
                         </div>
