Fixed sync of images from Artivity Online service.

--- a/Journal/app/directives/art-chat-comment/art-chat-comment.html
+++ b/Journal/app/directives/art-chat-comment/art-chat-comment.html
@@ -4,7 +4,7 @@
             <img src="app/resources/user.svg" width="28" height="28" class="img img-circular">
         </div>
         <div class="comment-bubble">
-            <div class="bubble-content"><i class="icon zmdi zmdi-help"></i><span class="text" emojione="{{t.comment.message}}"></span></div>
+            <div class="bubble-content"><span class="text" emojione="{{t.comment.message}}"></span></div>
             <div class="bubble-tip"></div>
             <div class="clearfix"></div>
         </div>
