Added Artivity Online connect to setup. Improved apps settings page.

--- a/Journal/app/dialogs/add-account-dialog/add-account-dialog.html
+++ b/Journal/app/dialogs/add-account-dialog/add-account-dialog.html
@@ -19,7 +19,7 @@
 							<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20" maxlength="20" ng-model="t.parameter.password" ng-enter="t.connectAccount(selectedClient)" required>
 						</div>
 					</form>
-					<div art-client-state-info state="{{t.clientState}}"></div>
+					<art-client-state-info state="t.clientState"></art-client-state-info>
 				</div>
 			</div>
 		</div>
