--- a/Journal/app/directives/art-chat-control/art-chat-control.html
+++ b/Journal/app/directives/art-chat-control/art-chat-control.html
@@ -1,7 +1,7 @@
 <div class="ctl-chat table-layout">
     <div class="row expand">
         <div class="layout-container">
-            <div class="ctl-protocol">
+            <div class="ctl-protocol" style="margin-top: 2px;">
                 <div class="scroll-container scroll-y layout-fix" scroll-glue>
                     <ul class="comment-list list-unstyled">
                         <li ng-repeat="comment in t.comments" class="list-item">
