--- a/Journal/app/directives/art-settings-user/art-settings-user.html
+++ b/Journal/app/directives/art-settings-user/art-settings-user.html
@@ -1,46 +1,50 @@
-<form name="form">
+<form name="userForm">
     <div class="form-header">
-        <p class="description">{{ 'SETTINGS.PROFILE.DESCRIPTION' | translate }}</p>
+        <p class="description" ng-show="!t.setup">{{ 'SETTINGS.PROFILE.DESCRIPTION' | translate }}</p>
     </div>
 
     <div class="clearfix"></div>
 
-    <div class="form-group">
-        <art-user-photo-img src="userPhotoUrl" width="100" height="100" changed="onPhotoChanged"></art-user-photo-img>
-
-        <label for="photo-btn" style="margin: 10px 0"><i class="zmdi zmdi-hc-fw"></i> {{ 'SETTINGS.PROFILE.LABEL_PICTURE' | translate }}</label>
+    <div class="form-group pull-left">
+        <art-user-photo-img src="t.userPhotoUrl" width="100" height="100" can-change="true" changed="t.onPhotoChanged"></art-user-photo-img>
     </div>
 
-    <div style="max-width: 500px;">
+    <div class="table-cell padding-x-xl" style="padding-top: 10px; width: 450px">
         <div class="form-group">
             <label for="name">{{ 'SETTINGS.PROFILE.LABEL_NAME' | translate }}</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="{{ 'SETTINGS.PROFILE.LABEL_NAME' | translate }}" size="30" ng-model="user.Name">
+            <input type="text" class="form-control" id="name" name="name" size="30" ng-model="t.user.Name" required>
         </div>
 
         <div class="form-group">
             <label for="email">{{'SETTINGS.PROFILE.LABEL_EMAIL' | translate}}</label>
-            <input type="text" class="form-control" id="email" name="email" placeholder="you@example.org" length="25" ng-model="user.EmailAddress" ng-minlength="5" required>
+            <input type="text" class="form-control" id="email" name="email" length="25" ng-model="t.user.EmailAddress" ng-minlength="5" required>
         </div>
 
-        <div class="form-group" style="margin-top: 3em;" class="label ng-hide" ng-show="{{backupEnabled}}">
-            <div ng-switch="backupStatus">
+        <div class="form-group" ng-show="t.setup">
+            <button class="btn btn-success" ng-click="t.submit()" ng-disabled="userForm.$invalid">Erstellen</button>
+        </div>
+
+        <div class="form-group" style="margin-top: 3em;" class="label ng-hide" ng-show="{{!t.setup}}">
+            <div ng-switch="t.backupStatus">
                 <div ng-switch-default>
-                    <div ng-switch="backupStatus.Error">
+                    <div ng-switch="t.backupStatus.Error">
                         <div ng-switch-when="null">
-                            <div ng-if="backupStatus.PercentComplete < 100">
-                                <i class="loader loader-xs"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_CREATING' | translate}}: <span ng-bind="backupStatus.PercentComplete"></span>%
+                            <div ng-if="t.backupStatus.PercentComplete < 100">
+                                <i class="loader loader-xs"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_CREATING' | translate}}:
+                                <span ng-bind="backupStatus.PercentComplete"></span>%
                             </div>
-                            <div ng-if="backupStatus.PercentComplete >= 100">
+                            <div ng-if="t.backupStatus.PercentComplete >= 100">
                                 <i class="zmdi zmdi-check-circle"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_SUCCESS' | translate}}
                             </div>
                         </div>
                         <div ng-switch-default>
-                            <i class="zmdi zmdi-alert-circle"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_ERROR' | translate}}: <span ng-bind="backupStatus.Error"></span>
+                            <i class="zmdi zmdi-alert-circle"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_ERROR' | translate}}:
+                            <span ng-bind="t.backupStatus.Error"></span>
                         </div>
                     </div>
                 </div>
                 <div ng-switch-when="null">
-                    <a class="btn btn-chromeless" ng-click="createBackup()"><i class="zmdi zmdi-account-box-o"></i> <span class="btn-label">{{'SETTINGS.PROFILE.LABEL_BACKUP_CREATE' | translate}}</span></a>
+                    <a class="btn btn-chromeless" ng-click="t.createBackup()"><i class="zmdi zmdi-account-box-o"></i> <span class="btn-label">{{'SETTINGS.PROFILE.LABEL_BACKUP_CREATE' | translate}}</span></a>
                 </div>
             </div>
         </div>
