--- a/Journal/app/directives/art-user-menu/art-user-menu.html
+++ b/Journal/app/directives/art-user-menu/art-user-menu.html
@@ -1,6 +1,6 @@
 <div class="toolbar toolbar-header pull-right">
     <a class="btn btn-header" href="#/settings">
-        <img ng-src="{{t.photoUrl}}" class="icn icn-circle icn-user pull-left">
+        <art-user-photo-img src="t.photoUrl" width="24" height="24" class="icn icn-circle icn-user pull-left"></art-user-photo-img>
         <label ng-bind="t.name" class="btn-label"></label>
     </a>
 </div>
