--- a/Journal/app/directives/art-user-photo-img/art-user-photo-img.html
+++ b/Journal/app/directives/art-user-photo-img/art-user-photo-img.html
@@ -1,7 +1,5 @@
 <div class="btn btn-avatar circular" ng-style="t.style">
     <input type="file" accept="image/*" style="display: none;"/>
 
-    <div class="placeholder"></div>
-
-    <img ng-src="{{t.src}}" width={{t.width}} height="{{t.height}}">
+    <img width={{t.width}} height="{{t.height}}" ng-src="{{t.src}}" ng-error-src="app/resources/img/placeholder-avatar.png">
 </div>
