--- a/Journal/index.html
+++ b/Journal/index.html
@@ -118,6 +118,7 @@
 	<script type="text/javascript" src="app/services/viewer.service.js"></script>
 	<script type="text/javascript" src="app/services/window.service.js"></script>
 	<script type="text/javascript" src="app/filters/reverse.js"></script>
+	<script type="text/javascript" src="app/directives/art-app-list/art-app-list.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-comment/art-chat-comment.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-control/art-chat-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-emoticon-picker/art-chat-emoticon-picker.js"></script>
