--- a/Journal/app/directives/art-app-list/art-app-list.html
+++ b/Journal/app/directives/art-app-list/art-app-list.html
@@ -7,6 +7,6 @@
         </li>
     </ul>
     <div ng-show="t.apps.length === 0">
-        Es sind keine Software-Plugins aktiviert.
+        {{ 'ART_APP_LIST.NO_PLUGINS' | translate}}
     </div>
 </div>
